[package]
name = "ethan_os"
version = "0.1.0"
authors = ["Ethan Langevin <ethan.langevin@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = "0.3.4"
spin = "0.4.9"
volatile = "0.2.3"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dev-dependencies]
array-init = "0.0.3"

[package.metadata.bootimage]
default-target = "x86_64-ethan_os.json"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
